Tweaks to Builder Class Step
Updates classes to be a dropdown, makes incomplete classes viewable but
not selectable, saving now populates fields to the character sheet.

--- a/package.json
+++ b/package.json
@@ -3,5 +3,8 @@
   "private": true,
   "scripts": {
     "export:data": "node scripts/export-game-data.mjs data/game-x-class-data.xlsx public/data/game-x"
+  },
+  "devDependencies": {
+    "firebase-admin": "^13.6.1"
   }
 }
